k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: sk014-stock-api
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  rules:
  - host: sk014-skala-stock-api.skala25a.project.skala-ai.com
    http:
      paths:  
      - path: /
        pathType: Prefix
        backend:
            name: sk014-stock-api
            port:
              number: 8080
  tls:
  - hosts:
    - '*.skala25a.project.skala-ai.com'
    secretName: skala25-project-tls-cert
